Removing unnecessary dependencies